--- a/Draft notes/2023-05-08.md
+++ b/Draft notes/2023-05-08.md
@@ -1,2 +1,12 @@
 # Med notes
+- [ ] Added to notes
+---
+
 Osteoarthritis: can find large bumps on side of top of finger. Herbeds nodes or something?
+
+Seizure:
+- you bite tongue laterally
+- always check phenytoin levels if they take something like carbamezapine, just check if they have been taking it before recommending upping dose/add medication 
+
+Bradycardia:
+- atenolol, metoprolol cause it
