Added score for pneumonia

--- a/Draft notes/2023-05-08.md
+++ b/Draft notes/2023-05-08.md
@@ -10,3 +10,10 @@ Seizure:
 
 Bradycardia:
 - atenolol, metoprolol cause it
+
+Pneumonia
+- SMART-COP Score for Pneumonia Severity
+	- Predicts need for intensive respiratory or vasopressor support (IRVS) in community-acquired pneumonia (CAP).
+
+>[!Important]
+**Tips for COVID-19:** Use to determine floor vs. ICU. Perhaps best performing to predict ICU admissions for CAP, but unclear applicability in COVID/viral pneumonias/ARDS.
