Added what to do if no abg or album

--- a/Draft notes/2023-05-08.md
+++ b/Draft notes/2023-05-08.md
@@ -14,6 +14,7 @@ Bradycardia:
 Pneumonia
 - SMART-COP Score for Pneumonia Severity
 	- Predicts need for intensive respiratory or vasopressor support (IRVS) in community-acquired pneumonia (CAP).
+	- If ABG or Album is not available, do a range (e.g. if score is 1 otherwise, do 1-2 if you don't know PaO2)
 
 >[!Important]
 **Tips for COVID-19:** Use to determine floor vs. ICU. Perhaps best performing to predict ICU admissions for CAP, but unclear applicability in COVID/viral pneumonias/ARDS.
