--- a/Draft notes/2023-05-20.md
+++ b/Draft notes/2023-05-20.md
@@ -57,7 +57,7 @@ Knowledge:
 	- How do you control it now?
 		- Well control?
 		- Fluctuating suger?
-	- Hypoglycemic episodes?
+	- **==Hypoglycemic episodes?==**
 		- If they are driving, and have an episode, accident
 		- Cans ay management because of hypo episodes, discuss cannot drive, such as with OT/MDP team
 	- Have you ever taken insulin?
@@ -93,3 +93,8 @@ Knowledge:
 4
 5. Patient on dual anti-platelet therapy with aspirin and clopidogrel, oxygen. CT angiogram to identify blockage, and possible stenting
 6. Discussion of reduction of lifestyle factors, management of hypertension and DM, what is her lipid levels, reduction of mody weight
+
+chadvasc
+gold crieria copd
+curb 65/smart 
+child pugh
