--- a/Draft notes/2023-05-20.md
+++ b/Draft notes/2023-05-20.md
@@ -18,7 +18,7 @@
 	- BEMONA for NSTEMI
 	- BMONA for STEMI, no VTE prophylaxis
 		- If decompensated [[Heart Failure]], do not give beta-blocker
-	- Beta blocker, enoxpirman, morphione, oxygen, nitrogen, aspirin
+	- ==Beta blocker, enoxpirman, morphione, oxygen, nitrogen, aspirin==
 - Long Term management:
 	- Do non-pharma and pharma
 	- **Always say** follow up with GP in the community
@@ -93,8 +93,3 @@ Knowledge:
 4
 5. Patient on dual anti-platelet therapy with aspirin and clopidogrel, oxygen. CT angiogram to identify blockage, and possible stenting
 6. Discussion of reduction of lifestyle factors, management of hypertension and DM, what is her lipid levels, reduction of mody weight
-
-chadvasc
-gold crieria copd
-curb 65/smart 
-child pugh
