--- a/RRM/2. Bites and Stings.md
+++ b/RRM/2. Bites and Stings.md
@@ -103,6 +103,17 @@ Systemic symptoms:
 
 # Marine Creatures
 
+1. DRSABCD
+2. Apply vinegar or hot water
+3. Oz mask and IV line - provide fluids
+4. ECG monitoring
+5. Antivenom for box jellyfish or stonefish or seasnake and assess
+6. On arrival, all suspected cases of Irukandji syndrome should have the following investigations  
+	1. Pathology: FBC, UEG, Mg, cardiac troponin  
+	2. 12 lead ECG  
+	3. Chest x-ray  
+	4. Echocardiogram (if there is clinical or radiographic evidence cardiovascular instability
+	5. **There is no antivenom for Irukandji syndrome**
 
 | Box jellyfish                                                                                                                               | Irukanji                                     | Blue Bottle                                                             |
 | ------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- | ----------------------------------------------------------------------- |
@@ -111,15 +122,32 @@ Systemic symptoms:
 | Bell - 35cm, 3m long tentacles!                                                                                                             | 3cm long                                     | Immediate, intense local pain >1hr                                      |
 | Cardiotoxic, neurotoxic, dermatonecrotic                                                                                                    | Massive catechoamine release                 | Linear red eruption at sting site lasting >1day                         |
 | Immediate excruciating pain                                                                                                                 | Delayed pain from sting ~30mins (5-120)      | Systemic effects - N/V, abdo pain, myalgia, rarely respiratory distress |
-| White welts appeaar "frosted"                                                                                                               | Welts not usually seen                       |  |
-| Welts become red whip-likke                                                                                                                 | ![[Pasted image 20231026100039.png]]                                             |Pick off adherent tentacles, rinse in sea water and then rinse in hot shower|
+| White welts appeaar "frosted"                                                                                                               | Welts not usually seen                       |==DO NOT vinegar==|
+| Welts become red whip-likke                                                                                                                 | ![[Pasted image 20231026100039.png]]                                             |Pick off adherent tentacles, rinse in sea water and then rinse in hot shower |
 | Permanent scarring can occur                                                                                                                |  DRSABCD                                            |                                                                         |
 |![[Pasted image 20231026095900.png]] |Irrigation of the sting area with vinegar|                                                                         |
 | DRSABCD                                                                                                                                     |If systemic envenomation has developed, transport to hospital|                                                                         |
-| Flood sting area with vinegar for 30secs to neutralise unfired nematocysts to allow removing tentacles without risking further envenomation |                                              |                                                                         |
-| DO NOT apply PBI                                                                                                                            |                                              |                                                                         |
+| Flood sting area with vinegar for 30secs to neutralise unfired nematocysts to allow removing tentacles without risking further envenomation |==DO NOT apply PBI==|                                                                         |
+|==DO NOT apply PBI== |                                              |                                                                         |
 | Ice packs, pain relief                                                                                                                      |                                              |                                                                         |
 |                                                                                                                                             |                                              |                                                                         |
 
 
 ### Other marine life
+- Blue-ringed octopus
+	- Neurotoxin - leads to resp failure and paralysis
+	- NO ANTIVENOM EXISTS
+	- Tx - BLS, PBI, ICU
+- Cone snail 
+	- Have a harpoon stinger
+	- Localised pain and numbness, paralysis, cyanosis
+	- NO ANTIVENOM EXISTS
+	- Tx - BLS, PBI, ICU
+- Stonefish
+	- Excruciating pain which can cause hallucinations
+	- Hot water immersion + transfer to hospital for irrigation + debridement of wound
+	- Pain: IV opiates, local / regional anaesthesia, stonefish antivenom if severe pain
+- Stingray
+	- Hot water immersion + transfer to hospital for irrigation + debridement of wound
+	- Pain: IV opiates, local / regional anaesthesia, stonefish antivenom if severe pain
+- Seasnake - seasnake antivenom, PBI
