--- a/RRM/7. Trauma in a Rural Setting.md
+++ b/RRM/7. Trauma in a Rural Setting.md
@@ -1,6 +1,16 @@
 
 # General
 - Major trauma is defined as some physical injury that involves real or potential threat to life and/or limb
+- Treatments:
+	- Analgesia – beware side effects of different compounds 
+	- Tranexamic acid – see CRASH 2 trial – a game changer 
+	- Tetanus vaccine? 
+	- Antibiotics? 
+	- Gentle debridement of grossly contaminated wounds prior to dressing 
+	- Grossly deformed limbs? 
+		- Urgent reduction and splinting, especially of long bones
+		- Stem bleeding 
+		- Provide analgesia
 
 # DRSABC
 ### Danger
@@ -48,3 +58,69 @@
 ![[Pasted image 20231102231348.png]]
 - **Distressed conscious patients will try to sit up, patients with tension pneumothorax are often combative complaining they can’t breathe.**
 - Minute volume = RR x tidal volume
+- ![[Pasted image 20231103100512.png]]
+- Always give oxygen in trauma cases
+	- Hudson Mask - 30% O2 (FiO2 0.3) 
+	- Non Rebreather Mask - 60% O2 ( FiO2 0.6) 
+	- Must have flow of > 12 litres per minute to prevent rebreathing of CO2. 
+	- BVM - 70-80% O2 (FiO2 0.7 -0.8) 
+	- CMV - 100% O2 (FiO2 1.0)
+- If respirations are shallow & ineffectual – BVM with synchronised assisted Intermittent Positive Pressure Ventilation (IPPV)
+- Non Invasive ventilation is very useful e.g. CPAP, BiPAP, Optiow 
+- Invasive ventilation – Intubation & ventilation – paralysing the patient, takes full control of the ventilation but you must be able to intubate.
+
+### Inadequate ventilation in the trauma patient
+- A significant head injury with altered level of consciousness will depress respiration. Assisted ventilation will be required. 
+- Pneumothorax or Haemopneumothorax will impair ventilation – these should be drained with intercostal catheters 
+- Flail Chest (especially with a large fail segment) will impair ventilation due to loss of integrity of the chest wall. The patient may require early assisted ventilation including intubation and ventilation. 
+	- Flail segment may only become evident a significant time interval 
+	- Flail segment is often associated with underlying pulmonary contusion which further impairs gas exchange
+- While included under breathing, a ==tension pneumothorax== will rapidly kill the patient by impairing venous return to the heart.
+	- DECOMPRESS THE CHEST IMMEDIATELY
+	- ICC- Chest decompression in either the 2nd ICS MCL or 4th ICS just anterior to Mid axillary line.
+
+### Circulation
+- ![[Pasted image 20231103101655.png]]
+- Inadequate perfusion VS shock 
+	- Haemorrhagic – vasculature and fluid – surgery, IV fluids and blood 
+	- Hypovolaemic – vasculature and fluid – IV fluids
+		- Start with Normal Saline 4 mls/kg/ % burns from time of injury (Modied Parkland formula)
+		- Adjust IV uid infusion to achieve Urine Output 0.5-1.0ml/kg/hr. 
+	- Cardiogenic – pump – treat arrhythmias, inotropes, reperfusion therapy 
+		- CPR in cardiac arrest 
+		- Inotropic drug support e.g. noradrenaline 3mg in 50ml normal saline
+	- Septic (a form of distributive) – vasculature and pump impairment - IV Fluids and inotropes, antibiotics 
+		- IV antibiotics
+		- fluid 10-20ml/kg fluid bolus and repeat x2 aiming for adequate cerebral perfusion and improving urine output 0.5-1ml/kg/hr 
+	- Distributive – vasculature - adrenaline
+		- Adult 0.5mg-1mg IM
+		- Child 0.01mg/kg 
+- Compress any external bleeding point 
+- IV Fluids Normal Saline 10 - 20 mls /kg. Repeat x 2, reassessing perfusion 
+- Blood –Packed Red Cells- O Neg or Group Specific in an emergency 
+- In the head injured patient, aim for an adequate cerebral perfusion (MAP 90 mmHg) i.e. enough fluid. 
+- Avoid hypotension in the head injured patient - a single episode of hypotension doubles the mortality. It can be difficult keeping the BP up while trying to avoid a catastrophic uncontrolled haemorrhage
+
+### Disability
+- AVPU until formal GCS 
+- Reassess GCS 
+- Signs of head trauma – may not be external signs  
+- Significantly elevated temperatures can affect clinical outcomes – treat with antipyretics 
+- ==Pupillary size and reaction== 
+- Check ==BSL== and treat appropriately 
+- Beware Hypothermia 
+	- Remember the “Triad of death” ==metabolic acidosis + coagulopathy + hypothermia = Death== ……keep patient warm
+
+### Exposure 
+- Log roll to check for occult injuries once basic haemodynamic stability achieved
+- Roll once haemodynamically stable 
+
+### Imaging
+- eFAST or x-rays
+
+
+# Secondary Survey 
+- Head to toe examination for all patients - both medical and trauma 
+- Think of the system and the anatomical area you are examining to determine a diagnosis 
+- Documentation of all assessment and injuries
+
