--- a/RRM/1. Skin Lesions.md
+++ b/RRM/1. Skin Lesions.md
@@ -124,8 +124,8 @@ Seborrhoeric keratosis, KA, Bowens, BCCs, warts, skin tags
 | ------------------------------------ | --------- | --------- |
 | ![[Pasted image 20231025004020.png]] |Dysplastic naevus|Excision|
 | ![[Pasted image 20231025004039.png]] |Naevus|Shave, excision|
-| ![[Pasted image 20231025004057.png]] |Seborrhoeic karatosis|Cryotherapy, curettage&cautery, shave|
-| ![[Pasted image 20231025004111.png]] |Warts|Cryotherapy, C&C|
+| ![[Pasted image 20231025004057.png]] |Seborrhoeic keratosis|Cryotherapy, curettage&cautery, shave |
+| ![[Pasted image 20231025004111.png]] |Warts|Cryotherapy, C&C |
 | ![[Pasted image 20231025004119.png]] |Dermatofibroma|  |
 | ![[Pasted image 20231025004126.png]] |Pyogenic granuloma|Cryotherapy, C&C, shave|
 | ![[Pasted image 20231025004133.png]] |Cherry angioma|Cryotherapy|
