--- a/RRM/2. Bites and Stings.md
+++ b/RRM/2. Bites and Stings.md
@@ -92,8 +92,8 @@ Systemic symptoms:
 | Funnel-web: big body (1-5cm)                                | Small body 3-10mm                                      | ![[Pasted image 20231026093046.png]]                                          |
 | Aggressive                                                  | Bite not aways apparent and fang marks uncommon        | Cold compress, remove stinger, apply antiseptic, oral analgesia/antihistamine |
 | Painful bite + fang marks                                   | Onset of pain is delayed for 5 minutes                 |                                                                               |
-|Tingling around mouth + saliva|Sweating and piloerection limited to bite site|                                                                               |
-|Sweating, breathing difficulty, nausea, muscle spasms|N/V, abdo/chest pain, palpitations, weakness, fever|                                                                               |
+|Tingling around mouth + saliva |Sweating and piloerection limited to bite site|                                                                               |
+|Sweating, breathing difficulty, nausea, muscle spasms |N/V, abdo/chest pain, palpitations, weakness, fever|                                                                               |
 | Confusion/unconsciousness                                   |  Apply cold compress, ==do NOT apply pressure bandage==                                                      |                                                                               |
 | Apply PBI                                                   |Antivenom is available|                                                                               |
 | Antivenom is available                                      |Oral paracetamo/NSAIDs|                                                                               |
@@ -151,3 +151,4 @@ Systemic symptoms:
 	- Hot water immersion + transfer to hospital for irrigation + debridement of wound
 	- Pain: IV opiates, local / regional anaesthesia, stonefish antivenom if severe pain
 - Seasnake - seasnake antivenom, PBI
+![[Pasted image 20231116190314.png]]
